--- a/estilo/style.css
+++ b/estilo/style.css
@@ -85,10 +85,12 @@ section.imagem > p {
 section#img01 {
     background-image: url(../imagens/background001.jpg);
     background-position: right center;
+    background-attachment: fixed;
 }
 
 section#img02 {
     background-image: url(../imagens/background002.jpg);
+    background-attachment: fixed;
 }
 
 footer{
